<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:background="@color/PowderBlue">


    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/player_x_s_turn"
        android:layout_marginBottom="20dp"
        android:background="@color/MediumAquamarine"
        android:textColor="@color/DarkSlateGray"
        android:textStyle="bold"
        android:fontFamily="monospace"/>

    <GridLayout
        android:id="@+id/gridlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        android:background="@color/Black"
        android:padding="5dp">

        <Button
            android:id="@+id/btn0"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/btbackground"
            android:textSize="60sp"
            android:textColor="@color/DarkSlateGray"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:padding="0dp"
            android:textStyle="bold"
            android:fontFamily="monospace"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/btbackground"
            android:textSize="60sp"
            android:textColor="@color/DarkSlateGray"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:padding="0dp"
            android:textStyle="bold"
            android:fontFamily="monospace"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/btbackground"
            android:textSize="60sp"
            android:textColor="@color/DarkSlateGray"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:padding="0dp"
            android:textStyle="bold"
            android:fontFamily="monospace"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/btbackground"
            android:textSize="60sp"
            android:textColor="@color/DarkSlateGray"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:padding="0dp"
            android:textStyle="bold"
            android:fontFamily="monospace"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/btbackground"
            android:textSize="60sp"
            android:textColor="@color/DarkSlateGray"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:padding="0dp"
            android:textStyle="bold"
            android:fontFamily="monospace"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/btbackground"
            android:textSize="60sp"
            android:textColor="@color/DarkSlateGray"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:padding="0dp"
            android:textStyle="bold"
            android:fontFamily="monospace"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/btbackground"
            android:textSize="60sp"
            android:textColor="@color/DarkSlateGray"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:padding="0dp"
            android:textStyle="bold"
            android:fontFamily="monospace"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/btbackground"
            android:textSize="60sp"
            android:textColor="@color/DarkSlateGray"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:padding="0dp"
            android:textStyle="bold"
            android:fontFamily="monospace"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:background="@drawable/btbackground"
            android:textSize="60sp"
            android:textColor="@color/DarkSlateGray"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:padding="0dp"
            android:textStyle="bold"
            android:fontFamily="monospace"/>
    </GridLayout>
    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btnreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_game"
        android:layout_marginTop="20dp"/>

</LinearLayout>